// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not automatically publish input/enum type if already created by user: schema 1`] = `
"enum Color {
  Something
  Else
}

type Query {
  users(where: UserWhereInput, skip: Int, after: UserWhereUniqueInput, before: UserWhereUniqueInput, first: Int, last: Int): [User!]!
}

type User {
  id: Int!
  favouriteColor: Color!
}

input UserWhereInput {
  customField: String
}

input UserWhereUniqueInput {
  id: Int
}
"
`;

exports[`does not automatically publish input/enum type if already created by user: typegen 1`] = `
"
interface ModelTypes {
  User: prisma.User
}
  
interface NexusPrismaInputs {
  Query: {
    users: {
  filtering: 'id' | 'favouriteColor' | 'AND' | 'OR' | 'NOT'
  ordering: 'id' | 'favouriteColor'
}

  },
    User: {


  }
}

interface NexusPrismaTypes {
  Query: {
    user: 'User'
    users: 'User'

  },
  Mutation: {
    createOneUser: 'User'
    updateOneUser: 'User'
    updateManyUser: 'BatchPayload'
    deleteOneUser: 'User'
    deleteManyUser: 'BatchPayload'
    upsertOneUser: 'User'

  },
  User: {
    id: 'Int'
    favouriteColor: 'Color'

}
}

interface NexusPrismaMethods {
  User: NexusPrismaFields<'User'>
  Query: NexusPrismaFields<'Query'>
  Mutation: NexusPrismaFields<'Mutation'>
}
  

declare global {
  type NexusPrisma<
    TypeName extends string,
    ModelOrCrud extends 'model' | 'crud'
  > = GetNexusPrisma<TypeName, ModelOrCrud>;

  // Pre-transform inputs
  interface PrismaInputs {
  
    PostWhereInput: prisma.PostWhereInput
    UserWhereInput: prisma.UserWhereInput
    BubbleWhereInput: prisma.BubbleWhereInput
    IdCompoundUniqueInput: prisma.IdCompoundUniqueInput
    BubbleWhereUniqueInput: prisma.BubbleWhereUniqueInput
    UserWhereUniqueInput: prisma.UserWhereUniqueInput
    PostWhereUniqueInput: prisma.PostWhereUniqueInput
    PostCreateWithoutAuthorsInput: prisma.PostCreateWithoutAuthorsInput
    PostCreateManyWithoutAuthorsInput: prisma.PostCreateManyWithoutAuthorsInput
    UserCreateWithoutBubbleInput: prisma.UserCreateWithoutBubbleInput
    UserCreateManyWithoutBubbleInput: prisma.UserCreateManyWithoutBubbleInput
    BubbleCreateInput: prisma.BubbleCreateInput
    PostUpdateWithoutAuthorsDataInput: prisma.PostUpdateWithoutAuthorsDataInput
    PostUpdateWithWhereUniqueWithoutAuthorsInput: prisma.PostUpdateWithWhereUniqueWithoutAuthorsInput
    PostScalarWhereInput: prisma.PostScalarWhereInput
    PostUpdateManyDataInput: prisma.PostUpdateManyDataInput
    PostUpdateManyWithWhereNestedInput: prisma.PostUpdateManyWithWhereNestedInput
    PostUpsertWithWhereUniqueWithoutAuthorsInput: prisma.PostUpsertWithWhereUniqueWithoutAuthorsInput
    PostUpdateManyWithoutAuthorsInput: prisma.PostUpdateManyWithoutAuthorsInput
    UserUpdateWithoutBubbleDataInput: prisma.UserUpdateWithoutBubbleDataInput
    UserUpdateWithWhereUniqueWithoutBubbleInput: prisma.UserUpdateWithWhereUniqueWithoutBubbleInput
    UserScalarWhereInput: prisma.UserScalarWhereInput
    UserUpdateManyDataInput: prisma.UserUpdateManyDataInput
    UserUpdateManyWithWhereNestedInput: prisma.UserUpdateManyWithWhereNestedInput
    UserUpsertWithWhereUniqueWithoutBubbleInput: prisma.UserUpsertWithWhereUniqueWithoutBubbleInput
    UserUpdateManyWithoutBubbleInput: prisma.UserUpdateManyWithoutBubbleInput
    BubbleUpdateInput: prisma.BubbleUpdateInput
    BubbleUpdateManyMutationInput: prisma.BubbleUpdateManyMutationInput
    BubbleCreateWithoutMembersInput: prisma.BubbleCreateWithoutMembersInput
    BubbleCreateOneWithoutMembersInput: prisma.BubbleCreateOneWithoutMembersInput
    UserCreateInput: prisma.UserCreateInput
    BubbleUpdateWithoutMembersDataInput: prisma.BubbleUpdateWithoutMembersDataInput
    BubbleUpsertWithoutMembersInput: prisma.BubbleUpsertWithoutMembersInput
    BubbleUpdateOneWithoutMembersInput: prisma.BubbleUpdateOneWithoutMembersInput
    UserUpdateInput: prisma.UserUpdateInput
    UserUpdateManyMutationInput: prisma.UserUpdateManyMutationInput
    UserCreateWithoutPostsInput: prisma.UserCreateWithoutPostsInput
    UserCreateManyWithoutPostsInput: prisma.UserCreateManyWithoutPostsInput
    PostCreateInput: prisma.PostCreateInput
    UserUpdateWithoutPostsDataInput: prisma.UserUpdateWithoutPostsDataInput
    UserUpdateWithWhereUniqueWithoutPostsInput: prisma.UserUpdateWithWhereUniqueWithoutPostsInput
    UserUpsertWithWhereUniqueWithoutPostsInput: prisma.UserUpsertWithWhereUniqueWithoutPostsInput
    UserUpdateManyWithoutPostsInput: prisma.UserUpdateManyWithoutPostsInput
    PostUpdateInput: prisma.PostUpdateInput
    PostUpdateManyMutationInput: prisma.PostUpdateManyMutationInput
    IntFilter: prisma.IntFilter
    UserFilter: prisma.UserFilter
    FloatFilter: prisma.FloatFilter
    PostStatusFilter: prisma.PostStatusFilter
    StringFilter: prisma.StringFilter
    PostFilter: prisma.PostFilter
    UUIDFilter: prisma.UUIDFilter
    DateTimeFilter: prisma.DateTimeFilter
    BubbleOrderByInput: prisma.BubbleOrderByInput
    UserOrderByInput: prisma.UserOrderByInput
    PostOrderByInput: prisma.PostOrderByInput
  }
}
  "
`;

exports[`does not publish enum twice (from input/output type): schema 1`] = `
"enum Color {
  Red
  Green
  Blue
}

input IntFilter {
  equals: Int
  not: Int
  in: [Int!]
  notIn: [Int!]
  lt: Int
  lte: Int
  gt: Int
  gte: Int
}

type Query {
  users(where: UserWhereInput, skip: Int, after: UserWhereUniqueInput, before: UserWhereUniqueInput, first: Int, last: Int): [User!]!
}

type User {
  id: Int!
  favouriteColor: Color!
}

input UserWhereInput {
  id: IntFilter
  favouriteColor: Color
  AND: [UserWhereInput!]
  OR: [UserWhereInput!]
  NOT: [UserWhereInput!]
}

input UserWhereUniqueInput {
  id: Int
}
"
`;

exports[`does not publish enum twice (from input/output type): typegen 1`] = `
"
interface ModelTypes {
  User: prisma.User
}
  
interface NexusPrismaInputs {
  Query: {
    users: {
  filtering: 'id' | 'favouriteColor' | 'AND' | 'OR' | 'NOT'
  ordering: 'id' | 'favouriteColor'
}

  },
    User: {


  }
}

interface NexusPrismaTypes {
  Query: {
    user: 'User'
    users: 'User'

  },
  Mutation: {
    createOneUser: 'User'
    updateOneUser: 'User'
    updateManyUser: 'BatchPayload'
    deleteOneUser: 'User'
    deleteManyUser: 'BatchPayload'
    upsertOneUser: 'User'

  },
  User: {
    id: 'Int'
    favouriteColor: 'Color'

}
}

interface NexusPrismaMethods {
  User: NexusPrismaFields<'User'>
  Query: NexusPrismaFields<'Query'>
  Mutation: NexusPrismaFields<'Mutation'>
}
  

declare global {
  type NexusPrisma<
    TypeName extends string,
    ModelOrCrud extends 'model' | 'crud'
  > = GetNexusPrisma<TypeName, ModelOrCrud>;

  // Pre-transform inputs
  interface PrismaInputs {
  
    PostWhereInput: prisma.PostWhereInput
    UserWhereInput: prisma.UserWhereInput
    BubbleWhereInput: prisma.BubbleWhereInput
    IdCompoundUniqueInput: prisma.IdCompoundUniqueInput
    BubbleWhereUniqueInput: prisma.BubbleWhereUniqueInput
    UserWhereUniqueInput: prisma.UserWhereUniqueInput
    PostWhereUniqueInput: prisma.PostWhereUniqueInput
    PostCreateWithoutAuthorsInput: prisma.PostCreateWithoutAuthorsInput
    PostCreateManyWithoutAuthorsInput: prisma.PostCreateManyWithoutAuthorsInput
    UserCreateWithoutBubbleInput: prisma.UserCreateWithoutBubbleInput
    UserCreateManyWithoutBubbleInput: prisma.UserCreateManyWithoutBubbleInput
    BubbleCreateInput: prisma.BubbleCreateInput
    PostUpdateWithoutAuthorsDataInput: prisma.PostUpdateWithoutAuthorsDataInput
    PostUpdateWithWhereUniqueWithoutAuthorsInput: prisma.PostUpdateWithWhereUniqueWithoutAuthorsInput
    PostScalarWhereInput: prisma.PostScalarWhereInput
    PostUpdateManyDataInput: prisma.PostUpdateManyDataInput
    PostUpdateManyWithWhereNestedInput: prisma.PostUpdateManyWithWhereNestedInput
    PostUpsertWithWhereUniqueWithoutAuthorsInput: prisma.PostUpsertWithWhereUniqueWithoutAuthorsInput
    PostUpdateManyWithoutAuthorsInput: prisma.PostUpdateManyWithoutAuthorsInput
    UserUpdateWithoutBubbleDataInput: prisma.UserUpdateWithoutBubbleDataInput
    UserUpdateWithWhereUniqueWithoutBubbleInput: prisma.UserUpdateWithWhereUniqueWithoutBubbleInput
    UserScalarWhereInput: prisma.UserScalarWhereInput
    UserUpdateManyDataInput: prisma.UserUpdateManyDataInput
    UserUpdateManyWithWhereNestedInput: prisma.UserUpdateManyWithWhereNestedInput
    UserUpsertWithWhereUniqueWithoutBubbleInput: prisma.UserUpsertWithWhereUniqueWithoutBubbleInput
    UserUpdateManyWithoutBubbleInput: prisma.UserUpdateManyWithoutBubbleInput
    BubbleUpdateInput: prisma.BubbleUpdateInput
    BubbleUpdateManyMutationInput: prisma.BubbleUpdateManyMutationInput
    BubbleCreateWithoutMembersInput: prisma.BubbleCreateWithoutMembersInput
    BubbleCreateOneWithoutMembersInput: prisma.BubbleCreateOneWithoutMembersInput
    UserCreateInput: prisma.UserCreateInput
    BubbleUpdateWithoutMembersDataInput: prisma.BubbleUpdateWithoutMembersDataInput
    BubbleUpsertWithoutMembersInput: prisma.BubbleUpsertWithoutMembersInput
    BubbleUpdateOneWithoutMembersInput: prisma.BubbleUpdateOneWithoutMembersInput
    UserUpdateInput: prisma.UserUpdateInput
    UserUpdateManyMutationInput: prisma.UserUpdateManyMutationInput
    UserCreateWithoutPostsInput: prisma.UserCreateWithoutPostsInput
    UserCreateManyWithoutPostsInput: prisma.UserCreateManyWithoutPostsInput
    PostCreateInput: prisma.PostCreateInput
    UserUpdateWithoutPostsDataInput: prisma.UserUpdateWithoutPostsDataInput
    UserUpdateWithWhereUniqueWithoutPostsInput: prisma.UserUpdateWithWhereUniqueWithoutPostsInput
    UserUpsertWithWhereUniqueWithoutPostsInput: prisma.UserUpsertWithWhereUniqueWithoutPostsInput
    UserUpdateManyWithoutPostsInput: prisma.UserUpdateManyWithoutPostsInput
    PostUpdateInput: prisma.PostUpdateInput
    PostUpdateManyMutationInput: prisma.PostUpdateManyMutationInput
    IntFilter: prisma.IntFilter
    UserFilter: prisma.UserFilter
    FloatFilter: prisma.FloatFilter
    PostStatusFilter: prisma.PostStatusFilter
    StringFilter: prisma.StringFilter
    PostFilter: prisma.PostFilter
    UUIDFilter: prisma.UUIDFilter
    DateTimeFilter: prisma.DateTimeFilter
    BubbleOrderByInput: prisma.BubbleOrderByInput
    UserOrderByInput: prisma.UserOrderByInput
    PostOrderByInput: prisma.PostOrderByInput
  }
}
  "
`;

exports[`publishes enum even as output type: schema 1`] = `
"enum Color {
  Red
  Green
  Blue
}

type Query {
  ok: Boolean!
}

type User {
  id: Int!
  favouriteColor: Color!
}
"
`;

exports[`publishes enum even as output type: typegen 1`] = `
"
interface ModelTypes {
  User: prisma.User
}
  
interface NexusPrismaInputs {
  Query: {
    users: {
  filtering: 'id' | 'favouriteColor' | 'AND' | 'OR' | 'NOT'
  ordering: 'id' | 'favouriteColor'
}

  },
    User: {


  }
}

interface NexusPrismaTypes {
  Query: {
    user: 'User'
    users: 'User'

  },
  Mutation: {
    createOneUser: 'User'
    updateOneUser: 'User'
    updateManyUser: 'BatchPayload'
    deleteOneUser: 'User'
    deleteManyUser: 'BatchPayload'
    upsertOneUser: 'User'

  },
  User: {
    id: 'Int'
    favouriteColor: 'Color'

}
}

interface NexusPrismaMethods {
  User: NexusPrismaFields<'User'>
  Query: NexusPrismaFields<'Query'>
  Mutation: NexusPrismaFields<'Mutation'>
}
  

declare global {
  type NexusPrisma<
    TypeName extends string,
    ModelOrCrud extends 'model' | 'crud'
  > = GetNexusPrisma<TypeName, ModelOrCrud>;

  // Pre-transform inputs
  interface PrismaInputs {
  
    PostWhereInput: prisma.PostWhereInput
    UserWhereInput: prisma.UserWhereInput
    BubbleWhereInput: prisma.BubbleWhereInput
    IdCompoundUniqueInput: prisma.IdCompoundUniqueInput
    BubbleWhereUniqueInput: prisma.BubbleWhereUniqueInput
    UserWhereUniqueInput: prisma.UserWhereUniqueInput
    PostWhereUniqueInput: prisma.PostWhereUniqueInput
    PostCreateWithoutAuthorsInput: prisma.PostCreateWithoutAuthorsInput
    PostCreateManyWithoutAuthorsInput: prisma.PostCreateManyWithoutAuthorsInput
    UserCreateWithoutBubbleInput: prisma.UserCreateWithoutBubbleInput
    UserCreateManyWithoutBubbleInput: prisma.UserCreateManyWithoutBubbleInput
    BubbleCreateInput: prisma.BubbleCreateInput
    PostUpdateWithoutAuthorsDataInput: prisma.PostUpdateWithoutAuthorsDataInput
    PostUpdateWithWhereUniqueWithoutAuthorsInput: prisma.PostUpdateWithWhereUniqueWithoutAuthorsInput
    PostScalarWhereInput: prisma.PostScalarWhereInput
    PostUpdateManyDataInput: prisma.PostUpdateManyDataInput
    PostUpdateManyWithWhereNestedInput: prisma.PostUpdateManyWithWhereNestedInput
    PostUpsertWithWhereUniqueWithoutAuthorsInput: prisma.PostUpsertWithWhereUniqueWithoutAuthorsInput
    PostUpdateManyWithoutAuthorsInput: prisma.PostUpdateManyWithoutAuthorsInput
    UserUpdateWithoutBubbleDataInput: prisma.UserUpdateWithoutBubbleDataInput
    UserUpdateWithWhereUniqueWithoutBubbleInput: prisma.UserUpdateWithWhereUniqueWithoutBubbleInput
    UserScalarWhereInput: prisma.UserScalarWhereInput
    UserUpdateManyDataInput: prisma.UserUpdateManyDataInput
    UserUpdateManyWithWhereNestedInput: prisma.UserUpdateManyWithWhereNestedInput
    UserUpsertWithWhereUniqueWithoutBubbleInput: prisma.UserUpsertWithWhereUniqueWithoutBubbleInput
    UserUpdateManyWithoutBubbleInput: prisma.UserUpdateManyWithoutBubbleInput
    BubbleUpdateInput: prisma.BubbleUpdateInput
    BubbleUpdateManyMutationInput: prisma.BubbleUpdateManyMutationInput
    BubbleCreateWithoutMembersInput: prisma.BubbleCreateWithoutMembersInput
    BubbleCreateOneWithoutMembersInput: prisma.BubbleCreateOneWithoutMembersInput
    UserCreateInput: prisma.UserCreateInput
    BubbleUpdateWithoutMembersDataInput: prisma.BubbleUpdateWithoutMembersDataInput
    BubbleUpsertWithoutMembersInput: prisma.BubbleUpsertWithoutMembersInput
    BubbleUpdateOneWithoutMembersInput: prisma.BubbleUpdateOneWithoutMembersInput
    UserUpdateInput: prisma.UserUpdateInput
    UserUpdateManyMutationInput: prisma.UserUpdateManyMutationInput
    UserCreateWithoutPostsInput: prisma.UserCreateWithoutPostsInput
    UserCreateManyWithoutPostsInput: prisma.UserCreateManyWithoutPostsInput
    PostCreateInput: prisma.PostCreateInput
    UserUpdateWithoutPostsDataInput: prisma.UserUpdateWithoutPostsDataInput
    UserUpdateWithWhereUniqueWithoutPostsInput: prisma.UserUpdateWithWhereUniqueWithoutPostsInput
    UserUpsertWithWhereUniqueWithoutPostsInput: prisma.UserUpsertWithWhereUniqueWithoutPostsInput
    UserUpdateManyWithoutPostsInput: prisma.UserUpdateManyWithoutPostsInput
    PostUpdateInput: prisma.PostUpdateInput
    PostUpdateManyMutationInput: prisma.PostUpdateManyMutationInput
    IntFilter: prisma.IntFilter
    UserFilter: prisma.UserFilter
    FloatFilter: prisma.FloatFilter
    PostStatusFilter: prisma.PostStatusFilter
    StringFilter: prisma.StringFilter
    PostFilter: prisma.PostFilter
    UUIDFilter: prisma.UUIDFilter
    DateTimeFilter: prisma.DateTimeFilter
    BubbleOrderByInput: prisma.BubbleOrderByInput
    UserOrderByInput: prisma.UserOrderByInput
    PostOrderByInput: prisma.PostOrderByInput
  }
}
  "
`;
